# zai-limits-cli

./: .env.example  .gitignore  README.md  pyproject.toml
src/zai_limits_cli/: cli.py
